2002-08-26 Christoph Cullmann <cullmann@kde.org>
  * Fixes for folding, cleanup, move folding tree into the buffer,
    add some inliner's

2002-06-01 Christian Couder <christian@kdevelop.org>
  * Move view stuff from katedocument to kateviewinternal.

2002-05-20 Christoph Cullmann <cullmann@kde.org>
  * some more references in use ;)
  * fixed some undo probs
    (mem leak, KateUndo is now only for internal use in KateUndoGroup)
  * start of convertion my*** to m_*** and add m_ to any other private stuff
  
2002-05-17 Christian Couder <christian@kdevelop.org>
  * Move font stuff from katedocument into new katefont.h and
    katefont.cpp files, and clean up katedocument font stuff. 

2002-05-14 Christian Couder <christian@kdevelop.org>
  * Big clean up in katedocument using new katecursor stuff. 

2002-05-12  Bernd Gehrmann  <bernd@mail.berlios.de>
  * Moved browser extension from view to doc, where it belongs
  * If servicetype in the browser extension specifies an encoding,
    use that instead of user's local encoding

2002-05-11 Christian Couder <christian@kdevelop.org>
  * implement the KTextEditor::Cursor in the KateCursor class 

2002-05-04 Christoph Cullmann <cullmann@kde.org>
  * first KTextEditor::ViewPlugin which works
    drop the helloworld plugin, as it is really no good example (bad code, ..)

2002-05-04 Christian Couder <christian@kdevelop.org>
  * fix undo for comment and uncomment
	
2002-05-01 Christian Couder <christian@kdevelop.org>
  * cleanups related to the uncomment feature in katetextline and katedocument

2002-01-04 Christoph Cullmann <cullmann@kde.org>
  * the search stuff in the katedocument is rewritten now, should work mostly,
    only search for whole words is just a mess :(

2002-01-03 Christoph Cullmann <cullmann@kde.org>
  * kate app and kwrite app now use the katepart via libloader and link only
    to the kateinterfaces (which will soon be splitted into katepartinterfaces
    and kateinterfaces