@@ -1,3 +1,6 @@
+2002-08-26
+  Hacking at the KDE e.V. meeting ;)
+
 2002-03-28
   The code folding Branch is readded back into HEAD
 
