@@ -1,6 +1,9 @@
 2002-08-26 Christoph Cullmann <cullmann@kde.org>
   * Fixes for folding, cleanup, move folding tree into the buffer,
     add some inliner's
+  * Fixes for the big memory usage for the attributes in the buffer
+    by using run length encoding for the attributes if they are
+    dumped into the bytearray
 
 2002-06-01 Christian Couder <christian@kdevelop.org>
   * Move view stuff from katedocument to kateviewinternal.
